--- a/.env
+++ b/.env
@@ -1,16 +1,20 @@
-# Configurações de Banco de Dados
+# Configurações do Banco de Dados MySQL
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
+DB_USER=finance_user
+DB_PASSWORD=secure_password
 DB_NAME=financas
 
 # Configurações de Segurança
-SECRET_KEY=sua_chave_secreta_aqui
-JWT_EXPIRE_HOURS=24
+JWT_SECRET_KEY=your_super_secret_jwt_key_here_change_this_in_production
+BCRYPT_ROUNDS=12
 
-# Configurações de E-mail (opcional)
-SMTP_SERVER=smtp.example.com
-SMTP_PORT=587
-SMTP_USER=user@example.com
-SMTP_PASSWORD=email_password 
+# Configurações da Aplicação
+APP_NAME=Sistema de Finanças Pessoais
+APP_VERSION=1.0.0
+DEBUG_MODE=true
+LOG_LEVEL=INFO
+
+# Configurações de Arquivo
+UPLOAD_FOLDER=uploads
+MAX_FILE_SIZE=10485760
